looking for a way to function the data extraction, but looks like it will have to be manual.

--- a/Brazil_ETL.ipynb
+++ b/Brazil_ETL.ipynb
@@ -14,14 +14,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_get(HDF5_file):\n",
+    "    hdf = h5py.File(HDF5_file, \"r\")\n",
+    "    burn_area = hdf['burned_area']\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data\n",
-    "# DataFrame.pd.read_csv(\"Resources/burned_areas/2016/01.txt\", sep='\\t')\n",
+    "ba_2106 = data_get(\"Resources\\GFED4_1s_2016.hdf5\")\n",
+    "ba_2015 = data_get(\"Resources\\GFED4_1s_2015.hdf5\")\n",
+    "ba_2014 = data_get(\"Resources\\GFED4_1s_2014.hdf5\")\n",
+    "ba_2013 = data_get(\"Resources\\GFED4_1s_2013.hdf5\")\n",
+    "ba_2012 = data_get(\"Resources\\GFED4_1s_2012.hdf5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ba_2016_01 = ba_2016['01']\n",
+    "bf_2016_01 = ba_2016_01['burned_fraction']\n",
+    "bf_2016_01_df = pd.DataFrame(bf_2016_01)\n",
+    "bf_2016_01_df = ba_2016_01_df.iloc[352:397,426:494]\n",
     "\n",
-    "df = h5py.File(\"Resources\\GFED4_1s_2016.hdf5\",\"r\")"
+    "\n",
+    "ba_2016['02']\n",
+    "ba_2016['03']\n",
+    "ba_2016['04']\n",
+    "ba_2016['05']\n",
+    "ba_2016['06']\n",
+    "ba_2016['07']\n",
+    "ba_2016['08']\n",
+    "ba_2016['09']\n",
+    "ba_2016['10']\n",
+    "ba_2016['11']\n",
+    "ba_2016['12']"
    ]
   },
   {
@@ -64,6 +102,15 @@
    "source": [
     "_01 = burned_area['01']\n",
     "_01.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def month_get "
    ]
   },
   {
