--- a/Brazil_ETL.ipynb
+++ b/Brazil_ETL.ipynb
@@ -131,8 +131,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Create the list for the total dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = []\n",
+    "year = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###  Calling the drill_down function \n",
-    "We call the function for each month starting with January 2016. <br>\n",
+    "We call the function for each month starting with January 2018. <br>\n",
     "We then feed the dataframes to the brazil_etl database in postgresql<br>\n",
     "Where we will be doing the calculations to find the percentage of area burned per month, year, and half decade\n"
    ]
@@ -146,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,10 +217,22 @@
     "                 bf_2018_11_df + \n",
     "                 bf_2018_12_df)\n",
     "\n",
+    "\n",
+    "\n",
     "bf_2018_yr_df.to_sql('bf_2018_yr', engine, if_exists='replace', index=False)\n",
     "\n",
-    "\n"
+    "\n",
+    "bf_2018_tot = bf_2018_yr_df.values.sum()\n",
+    "total.append(bf_2018_tot)\n",
+    "year.append(\"2018\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,8 +297,12 @@
     "                 bf_2017_11_df + \n",
     "                 bf_2017_12_df)\n",
     "\n",
+    "\n",
     "bf_2017_yr_df.to_sql('bf_2017_yr', engine, if_exists='replace', index=False)\n",
-    "\n"
+    "\n",
+    "bf_2017_tot = bf_2017_yr_df.values.sum()\n",
+    "total.append(bf_2017_tot)\n",
+    "year.append(\"2017\")"
    ]
   },
   {
@@ -281,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +368,12 @@
     "                 bf_2016_11_df + \n",
     "                 bf_2016_12_df)\n",
     "\n",
-    "bf_2016_yr_df.to_sql('bf_2016_yr', engine, if_exists='replace', index=False)\n"
+    "\n",
+    "bf_2016_yr_df.to_sql('bf_2016_yr', engine, if_exists='replace', index=False)\n",
+    "\n",
+    "bf_2016_tot = bf_2016_yr_df.values.sum()\n",
+    "total.append(bf_2016_tot)\n",
+    "year.append(\"2016\")"
    ]
   },
   {
@@ -347,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,8 +439,12 @@
     "                 bf_2015_11_df + \n",
     "                 bf_2015_12_df)\n",
     "\n",
+    "\n",
     "bf_2015_yr_df.to_sql('bf_2015_yr', engine, if_exists='replace', index=False)\n",
-    "\n"
+    "\n",
+    "bf_2015_tot = bf_2015_yr_df.values.sum()\n",
+    "total.append(bf_2015_tot)\n",
+    "year.append(\"2015\")"
    ]
   },
   {
@@ -414,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,29 +510,106 @@
     "                 bf_2014_11_df + \n",
     "                 bf_2014_12_df)\n",
     "\n",
+    "\n",
     "bf_2014_yr_df.to_sql('bf_2014_yr', engine, if_exists='replace', index=False)\n",
-    "\n"
+    "\n",
+    "bf_2014_tot = bf_2014_yr_df.values.sum()\n",
+    "total.append(bf_2014_tot)\n",
+    "year.append(\"2014\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# ba_sum = ba2016_01.values.sum()"
+    "### Totals Table\n",
+    "\n",
+    "We create a yearly totals table that has the total carbon emissions for the area of interest.  In grams of Carbon per square meter. <br>\n",
+    "<br>\n",
+    "First we zip the two lists created from above.  The we create a datafram with an index of 0 and the columns based on the year. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>47763.775312</td>\n",
+       "      <td>94251.34274</td>\n",
+       "      <td>73999.727749</td>\n",
+       "      <td>102745.33422</td>\n",
+       "      <td>59301.509501</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           2018         2017          2016          2015          2014\n",
+       "0  47763.775312  94251.34274  73999.727749  102745.33422  59301.509501"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yearly = dict(zip(year, total))\n",
+    "yearly_carbon_total_df = pd.DataFrame(yearly, index=[0])\n",
+    "yearly_carbon_total_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We import the table to PostGres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearly_carbon_total_df.to_sql('yearly_carbon_total', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
