updated markdown documentation

--- a/carbon_emissions_data.ipynb
+++ b/carbon_emissions_data.ipynb
@@ -8,15 +8,15 @@
     "\n",
     "Here we are extracting monthly burn data for the area of the State of Amazonas, Brazil.<br>\n",
     "<br>\n",
-    "We will be looking at a five year span from 2012 to 2016.  The goal is to try and see <br>\n",
+    "We will be looking at a five year span from 2014 to 2018.  The goal is to try and see <br>\n",
     "if there is an increase in the amount of forest fires in the region and if the demand <br>\n",
     "for soybean and corn is directly linked to it. \n",
     "\n",
     "### Data files\n",
     "\n",
-    "We will be using soybean and corn data gathered from Kaggle.com and burn data gathered from <br>\n",
+    "We will be using soybean and corn data gathered from Kaggle.com and carbon emissions data gathered from <br>\n",
     "the Global Fire Emissions Database (GFED).  Data from GFED are all stored in HDF5 files and <br>\n",
-    "requires some drilling down to get to the tables we need -- the monthly burned areas.  \n"
+    "requires some drilling down to get to the tables we need -- the monthly carbon emissions table.  \n"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "### Define dthe data_get function \n",
     "\n",
-    "This will grab the HDF5 file and go down to the burned_area data set. "
+    "This will grab the HDF5 file and go down to the emissions data set. "
    ]
   },
   {
@@ -105,9 +105,9 @@
    "source": [
     "### Define the function to drill into the HDF5 file\n",
     "\n",
-    "The table we need resides in burned fraction under each month of the year. <br>\n",
+    "The table we need resides in C under each month of the year. <br>\n",
     "We will extract this data and put it to a dataframe.<br>\n",
-    "We then filter the data frame from column 426 to 494  and from row 352 to 397.<br>\n",
+    "We then filter the data frame from column 444 to 519  and from row 352 to 399.<br>\n",
     "The table corresponds to the lat, long coordinates for the rectangular area that <br>\n",
     "is roughly the area of the State of Amazonas, Brazil. "
    ]
@@ -151,7 +151,7 @@
     "###  Calling the drill_down function \n",
     "We call the function for each month starting with January 2018. <br>\n",
     "We then feed the dataframes to the brazil_etl database in postgresql<br>\n",
-    "Where we will be doing the calculations to find the percentage of area burned per month, year, and half decade\n"
+    "\n"
    ]
   },
   {
@@ -226,13 +226,6 @@
     "total.append(bf_2018_tot)\n",
     "year.append(\"2018\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -606,36 +599,6 @@
    "source": [
     "yearly_carbon_total_df.to_sql('yearly_carbon_total', engine, if_exists='replace', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ba_sum/3060\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
