updated documentation on carbon emissions

--- a/carbon_emissions_data.ipynb
+++ b/carbon_emissions_data.ipynb
@@ -131,6 +131,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### HDF5 Sample\n",
+    "\n",
+    "For future reference, the HDF5 dataset file structure looks like this. \n",
+    "\n",
+    "![](images/hdf5_sample.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create the list for the total dataframe"
    ]
   },
