--- a/carbon_emissions_data.ipynb
+++ b/carbon_emissions_data.ipynb
@@ -109,12 +109,18 @@
     "We will extract this data and put it to a dataframe.<br>\n",
     "We then filter the data frame from column 444 to 519  and from row 352 to 399.<br>\n",
     "The table corresponds to the lat, long coordinates for the rectangular area that <br>\n",
-    "is roughly the area of the State of Amazonas, Brazil. "
+    "is roughly the area of the Amazon Rainforest. \n",
+    "\n",
+    "Coordinates \n",
+    "NW: 1.819447, -68.950113\n",
+    "NE: 1.819447, -50.397135\n",
+    "SE: -9.666005, -50.397135\n",
+    "SW: -9.666005"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
