--- a/carbon_emissions_data.ipynb
+++ b/carbon_emissions_data.ipynb
@@ -111,11 +111,11 @@
     "The table corresponds to the lat, long coordinates for the rectangular area that <br>\n",
     "is roughly the area of the Amazon Rainforest. \n",
     "\n",
-    "Coordinates \n",
-    "NW: 1.819447, -68.950113\n",
-    "NE: 1.819447, -50.397135\n",
-    "SE: -9.666005, -50.397135\n",
-    "SW: -9.666005"
+    "Coordinates<br> \n",
+    "NW: 1.819447, -68.950113<br>\n",
+    "NE: 1.819447, -50.397135<br>\n",
+    "SE: -9.666005, -50.397135<br>\n",
+    "SW: -9.666005, -68.950113<br>"
    ]
   },
   {
