--- a/carbon_emissions_data.ipynb
+++ b/carbon_emissions_data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Brazil_ETL\n",
     "\n",
-    "Here we are extracting monthly burn data for the area of the State of Amazonas, Brazil.<br>\n",
+    "Here we are extracting monthly emissions data for the area of the Amazon Rainforest.<br>\n",
     "<br>\n",
     "We will be looking at a five year span from 2014 to 2018.  The goal is to try and see <br>\n",
     "if there is an increase in the amount of forest fires in the region and if the demand <br>\n",
