updated jupyter + resources folder

--- a/Merging_Corn_Soy.ipynb
+++ b/Merging_Corn_Soy.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing libraries\n",
     "import os\n",
     "import glob\n",
     "import pandas as pd\n",
@@ -20,6 +21,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loading csv file\n",
+    "#brazilian government expenses, including all the ones related to agriculture or land\n",
+    "#obtained from https://www.kaggle.com/vicentegsantos/brazil-gov-expenses\n",
+    "#the original file (Brazil_Gov_Exp_All - Formated.csv) was not in CSV format, so it was converted to Brazil.csv in Excel\n",
     "gov_file = \"./Resources/Brazil.csv\""
    ]
   },
@@ -148,30 +153,10 @@
     }
    ],
    "source": [
+    "#reading csv\n",
     "gov_df = pd.read_csv(gov_file, encoding='ISO-8859-1')\n",
     "gov_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -179,7 +164,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"./soy_corn/soy\")\n",
+    "#soy bean production/consupmtion totals per year, including global and brazilian numbers\n",
+    "#saved all the soy files to \"soy\" subfolder, and all the corn files to \"corn\" subfolder\n",
+    "#obtained from https://www.kaggle.com/ainslie/usda-wasde-monthly-corn-soybean-projections\n",
+    "\n",
+    "#switching to soy directory (put all the soy files in \"soy folder\")\n",
+    "os.chdir(\"./Resources/soy_corn/soy\")\n",
+    "\n",
+    "#loading csv files\n",
     "extension = 'csv'\n",
     "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]"
    ]
@@ -959,6 +951,7 @@
     }
    ],
    "source": [
+    "#Saving soy total values on global dataframe\n",
     "combined_soy_csv_df = pd.DataFrame(combined_soy_csv)\n",
     "combined_soy_global_df = combined_soy_csv_df[[\"Date\", \"Area Planted\", \"Yield\", \"Area Harvested\", \"Beginning Stocks\", \\\n",
     "                                           \"Production\", \"Imports\", \"Total Supply\", \"Crushings\", \"Exports\"]]\n",
@@ -968,7 +961,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1090,6 +1085,7 @@
     }
    ],
    "source": [
+    "#Saving soy Brazilian values on Brazil dataframe\n",
     "combined_soy_brazil_df = combined_soy_csv_df[[\"Date\", \"Brazil BeginningStocks\",\"Brazil Production\",\"Brazil Imports\", \\\n",
     "                                              \"Brazil DomesticTotal\", \"Brazil DomesticCrush\",\"Brazil Exports\", \"Brazil EndingStocks\"]]\n",
     "combined_soy_brazil_df.head()"
@@ -1101,6 +1097,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#switching to corn directory (put all the soy files in \"corn folder\")\n",
     "os.chdir(\"../corn\")"
    ]
   },
@@ -1110,6 +1107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loading csv files\n",
+    "#corn production/consupmtion totals per year, including global and brazilian numbers\n",
+    "#obtained from https://www.kaggle.com/ainslie/usda-wasde-monthly-corn-soybean-projections\n",
     "extension = 'csv'\n",
     "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
     "\n",
@@ -2252,6 +2252,7 @@
     }
    ],
    "source": [
+    "#Saving corn total values on global dataframe\n",
     "combined_corn_csv_df = pd.DataFrame(combined_corn_csv)\n",
     "combined_corn_global_df = combined_corn_csv_df[[\"Date\", \"Area Planted\", \"Yield\", \"Area Harvested\", \"Beginning Stocks\", \\\n",
     "                                           \"Production\", \"Imports\", \"Total Supply\", \"Feed and Residual\", \"Exports\"]]\n",
@@ -2383,9 +2384,21 @@
     }
    ],
    "source": [
+    "#Saving corn Brazilian values on Brazil dataframe\n",
     "combined_corn_brazil_df = combined_corn_csv_df[[\"Date\", \"Brazil BeginningStocks\",\"Brazil Production\",\"Brazil Imports\", \\\n",
     "                                              \"Brazil DomesticTotal\", \"Brazil DomesticFeed\",\"Brazil Exports\", \"Brazil EndingStocks\"]]\n",
     "combined_corn_brazil_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#uploading\n",
+    "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
+    "combined_soy_brazil_df.to_sql('combined_soy_brazil', engine, if_exists='replace', index=False)"
    ]
   },
   {
@@ -2394,6 +2407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#uploading do postgrss sql db\n",
     "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
     "combined_soy_brazil_df.to_sql('combined_soy_brazil', engine, if_exists='replace', index=False)"
    ]
@@ -2419,11 +2433,339 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# APPENDIX \n",
+    "##Additional Data sources that would help the analysis but were not loaded in the database for this exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading csv file\n",
+    "#corn bean price totals per month\n",
+    "#obtained from https://www.kaggle.com/ainslie/usda-wasde-monthly-corn-soybean-projections\n",
+    "#the original file was not in CSV format, so it was converted to csv in Excel\n",
+    "corn_price_file = \"./Resources/corn_nearby.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dates</th>\n",
+       "      <th>nearby_close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2/4/2008</td>\n",
+       "      <td>510.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2/5/2008</td>\n",
+       "      <td>509.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2/6/2008</td>\n",
+       "      <td>501.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2/7/2008</td>\n",
+       "      <td>499.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2/8/2008</td>\n",
+       "      <td>508.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      dates  nearby_close\n",
+       "0  2/4/2008        510.50\n",
+       "1  2/5/2008        509.25\n",
+       "2  2/6/2008        501.50\n",
+       "3  2/7/2008        499.50\n",
+       "4  2/8/2008        508.00"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reading csv\n",
+    "corn_price_df = pd.read_csv(corn_price_file, encoding='ISO-8859-1')\n",
+    "corn_price_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading csv file\n",
+    "#soy bean price totals per month\n",
+    "#obtained from https://www.kaggle.com/ainslie/usda-wasde-monthly-corn-soybean-projections\n",
+    "#the original file was not in CSV format, so it was converted to csv in Excel\n",
+    "soy_price_file = \"./Resources/soybean_nearby.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dates</th>\n",
+       "      <th>nearby_close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2/4/2008</td>\n",
+       "      <td>1326.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2/5/2008</td>\n",
+       "      <td>1323.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2/6/2008</td>\n",
+       "      <td>1318.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2/7/2008</td>\n",
+       "      <td>1331.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2/8/2008</td>\n",
+       "      <td>1339.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      dates  nearby_close\n",
+       "0  2/4/2008        1326.0\n",
+       "1  2/5/2008        1323.0\n",
+       "2  2/6/2008        1318.5\n",
+       "3  2/7/2008        1331.5\n",
+       "4  2/8/2008        1339.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reading csv\n",
+    "soy_price_df = pd.read_csv(soy_price_file, encoding='ISO-8859-1')\n",
+    "soy_price_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading csv file\n",
+    "#corn bean price totals per month\n",
+    "#obtained from https://www.kaggle.com/gustavomodelli/forest-fires-in-brazil\n",
+    "forest_fire_count_file = \"./Resources/forest_fire_amazon.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>month</th>\n",
+       "      <th>number</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1998-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2001-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2002-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year state    month  number        date\n",
+       "0  1998  Acre  Janeiro     0.0  1998-01-01\n",
+       "1  1999  Acre  Janeiro     0.0  1999-01-01\n",
+       "2  2000  Acre  Janeiro     0.0  2000-01-01\n",
+       "3  2001  Acre  Janeiro     0.0  2001-01-01\n",
+       "4  2002  Acre  Janeiro     0.0  2002-01-01"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reading csv\n",
+    "forest_fire_count_df = pd.read_csv(forest_fire_count_file, encoding='ISO-8859-1', sep = \",\")\n",
+    "forest_fire_count_df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#uploading do postgrss sql db\n",
+    "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
+    "soy_price_df.to_sql('soy_price', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
+    "corn_price_df.to_sql('corn_price', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
+    "forest_fire_count_df.to_sql('forest_fire_count', engine, if_exists='replace', index=False)"
+   ]
   }
  ],
  "metadata": {
