updates for readme

--- a/Merging_Corn_Soy.ipynb
+++ b/Merging_Corn_Soy.ipynb
@@ -2407,7 +2407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uploading do postgrss sql db\n",
+    "#uploading do postgres sql db\n",
     "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
     "combined_soy_brazil_df.to_sql('combined_soy_brazil', engine, if_exists='replace', index=False)"
    ]
@@ -2633,7 +2633,7 @@
    "outputs": [],
    "source": [
     "#loading csv file\n",
-    "#corn bean price totals per month\n",
+    "#Forest Fire Count per State in Brazil\n",
     "#obtained from https://www.kaggle.com/gustavomodelli/forest-fires-in-brazil\n",
     "forest_fire_count_file = \"./Resources/forest_fire_amazon.csv\""
    ]
@@ -2742,7 +2742,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uploading do postgrss sql db\n",
+    "#uploading do postgres sql db\n",
     "engine = create_engine('postgresql://sqladmin:password@localhost:5432/brazil_etl')\n",
     "soy_price_df.to_sql('soy_price', engine, if_exists='replace', index=False)"
    ]
